--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,8 @@
 @import './base.css';
 
-h5 {
-  background: #c6d081;
-}
+/*h5 {*/
+/*  background: #c6d081;*/
+/*}*/
 
 .templ {
   background: #dfe4bd;
