--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,7 +3,15 @@
 /*h5 {*/
 /*  background: #c6d081;*/
 /*}*/
-
+span,
+p,
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: #333333;
+}
 .templ {
   background: #dfe4bd;
 }
