!wip file input button text

--- a/src/assets/scss/icons.scss
+++ b/src/assets/scss/icons.scss
@@ -7,3 +7,7 @@
 .icn-settings {
   background: url('../img/icons/settings.svg');
 }
+
+.icn-trash {
+  background: url('../img/icons/trash.svg');
+}
