+add BaseAccordion.vue

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,6 @@
 @import './base.css';
-
-/*h5 {*/
-/*  background: #c6d081;*/
-/*}*/
+@import './multiselect.scss';
+/*h5 {*/ /*  background: #c6d081;*/ /*}*/
 span,
 p,
 h1,
