--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -37,3 +37,8 @@ h5 {
     //box-shadow: 0 -2px;
   }
 }
+@layer utilities {
+  .hamburger-toggle {
+    @apply [&>div]:h-0 [&>div]:bg-transparent [&>div]:before:translate-y-0 [&>div]:before:rotate-45 [&>div]:after:translate-y-0 [&>div]:after:-rotate-45;
+  }
+}
